--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <spring.version>5.1.5.RELEASE</spring.version>
         <spring.kafka.version>2.2.4.RELEASE</spring.kafka.version>
+        <kafka.version>2.1.1</kafka.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.complier.source>1.8</maven.complier.source>
         <maven.complier.target>1.8</maven.complier.target>
@@ -38,6 +39,12 @@
             <version>2.1.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
